--- a/actividad_lista_tareas/index.html
+++ b/actividad_lista_tareas/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
   <head>
+    <meta charset="utf-8">
     <title>Lista de Tareas</title>
-    <link rel="stylesheet" type="text/css" href="estilos.css" />
+    <link rel="stylesheet" type="text/css" href="estilos.css">
   </head>
   <body>
     <h1>Lista de Tareas</h1>
